--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -16,7 +16,8 @@
   left: 369px;
 }
 
-/* Select the image inside the element with an id of basket (using its descendent relationship) */
+/* Select the image inside the element with an id of basket (using its
+descendent relationship) */
 
 #basket img {
   position: absolute;
@@ -25,7 +26,8 @@
   left: 319px;
 }
 
-/* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
+/* Select the image based on it being a sibling that follows immediately after
+the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -34,7 +36,8 @@
   left: 455px;
 }
 
-/* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
+/* Select the image that has an attribute value matching "Kitty 5" (using
+attribute selector) */
 
 /*__write_selector_here__*/ {
   position: absolute;
