--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -39,7 +39,7 @@ the element with an id of ball (using adjacent sibling selector) */
 /* Select the image that has an attribute value matching "Kitty 5" (using
 attribute selector) */
 
-img[alt="Kitty 5"] {
+img[alt=Kitty 5] {
   position: absolute;
   z-index: 3;
   top: 217px;
